Gtk: fix enabling and disabling the C override helper

We need to include "config.h" in the introspected header, so that
it knows whether to expose the function or not, and we cannot use
a constant because the introspection scanner is too limited to
recognize conditional constants. So we just check for the function
directly.

https://bugzilla.gnome.org/show_bug.cgi?id=727394